# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "stackfuture"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
