# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "stackfuture"
description = "StackFuture is a wrapper around futures that stores the wrapped future in space provided by the caller."
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Microsoft"]
repository = "https://github.com/microsoft/stackfuture"
keywords = ["async", "no_std", "futures"]
categories = ["asynchronous", "no-std", "rust-patterns"]

[dependencies]

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }

[features]
alloc = []
